<resources>
    <string name="app_name">ParkVision</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="login">login</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="textForgotPassword" />
    <string name="create_account">Create Account</string>
    <string name="today">Today</string>
    <string name="exercise">Exercise</string>
    <string name="settings">Settings</string>
</resources>